--- a/index.html
+++ b/index.html
@@ -169,10 +169,104 @@
 </head>
 <body>
     <!-- El contenido será insertado por JavaScript -->
-    <div id="app-container">
-        <div style="text-align:center;padding:100px;color:var(--primary);">
-            <h1><i class="fas fa-spinner fa-spin"></i> Cargando Tegra Spec Manager...</h1>
+  <!-- SPEC CREATOR -->
+<div id="spec-creator" class="tab-content">
+    <!-- Información General -->
+    <div class="card">
+        <div class="card-header">
+            <h2 class="card-title"><i class="fas fa-info-circle"></i> Información General</h2>
+            <button class="btn btn-success btn-sm" onclick="document.getElementById('excelFile').click()">
+                <i class="fas fa-file-excel"></i> Cargar Excel
+            </button>
         </div>
+        <div class="card-body">
+            <div class="form-grid">
+                <div class="form-group">
+                    <label class="form-label">CLIENTE:</label>
+                    <input type="text" id="customer" class="form-control" oninput="updateClientLogo()">
+                </div>
+                <div class="form-group">
+                    <label class="form-label">STYLE:</label>
+                    <input type="text" id="style" class="form-control">
+                </div>
+                <div class="form-group">
+                    <label class="form-label">COLORWAY:</label>
+                    <input type="text" id="colorway" class="form-control">
+                </div>
+                <div class="form-group">
+                    <label class="form-label">SEASON:</label>
+                    <input type="text" id="season" class="form-control">
+                </div>
+                <div class="form-group">
+                    <label class="form-label">PATTERN #:</label>
+                    <input type="text" id="pattern" class="form-control">
+                </div>
+                <div class="form-group">
+                    <label class="form-label">P.O. #:</label>
+                    <input type="text" id="po" class="form-control">
+                </div>
+                <div class="form-group">
+                    <label class="form-label">SAMPLE TYPE:</label>
+                    <input type="text" id="sample-type" class="form-control">
+                </div>
+                <div class="form-group">
+                    <label class="form-label">NAME / TEAM:</label>
+                    <input type="text" id="name-team" class="form-control">
+                </div>
+                <div class="form-group">
+                    <label class="form-label">GENDER:</label>
+                    <input type="text" id="gender" class="form-control">
+                </div>
+                <div class="form-group">
+                    <label class="form-label">DISEÑADOR:</label>
+                    <select id="designer" class="form-control">
+                        <option value="">Seleccionar...</option>
+                        <option>ELMER VELEZ</option>
+                        <option>DANIEL HERNANDEZ</option>
+                        <option>CINDY PINEDA</option>
+                        <option>FERNANDO FERRERA</option>
+                        <option>NILDA CORDOBA</option>
+                        <option>OTRO</option>
+                    </select>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- Artes / Ubicaciones -->
+    <div class="card">
+        <div class="card-header">
+            <h2 class="card-title"><i class="fas fa-layer-group"></i> Artes / Ubicaciones</h2>
+            <button class="btn btn-primary btn-sm" onclick="addArte()">
+                <i class="fas fa-plus"></i> Nueva Ubicación
+            </button>
+        </div>
+        <div class="card-body" id="artes-container">
+            <!-- Las ubicaciones aparecerán aquí -->
+        </div>
+    </div>
+
+    <!-- Botones finales -->
+    <div class="card">
+        <div class="card-body" style="display:flex;gap:15px;flex-wrap:wrap;justify-content:center">
+            <button class="btn btn-success btn-lg" onclick="saveSpec()">
+                <i class="fas fa-save"></i> Guardar Spec
+            </button>
+            <button class="btn btn-primary btn-lg" onclick="downloadProjectZip()">
+                <i class="fas fa-file-archive"></i> Descargar ZIP
+            </button>
+            <button class="btn btn-success btn-lg" onclick="exportPDF()">
+                <i class="fas fa-file-pdf"></i> Exportar PDF
+            </button>
+            <button class="btn btn-warning btn-lg" onclick="exportToExcel()">
+                <i class="fas fa-file-excel"></i> Exportar Excel
+            </button>
+            <button class="btn btn-outline btn-lg" onclick="clearForm()">
+                <i class="fas fa-broom"></i> Limpiar
+            </button>
+        </div>
+    </div>
+</div>
     </div>
     
     <!-- Status Message -->
