--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
     <input type="file" id="excelFile" accept=".xlsx,.xls" style="display:none">
     <input type="file" id="imageInput" accept="image/*" style="display:none">
     
-    <!-- UN SOLO ARCHIVO JAVASCRIPT -->
+    <!-- ARCHIVO JAVASCRIPT LOCAL -->
     <script src="app.js"></script>
 </body>
 </html>
