--- a/index.html
+++ b/index.html
@@ -1,4 +1,6 @@
-<head>
+<!DOCTYPE html>
+<html lang="es">
+    <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tegra - Technical Spec Manager</title>
@@ -3400,7 +3402,7 @@ ${JSON.stringify(error.extraData, null, 2)}
             
             return colorName;
         }
-       // Al final del archivo spectegranew.html, ANTES del cierre </script>:
+       // Al final del archivo spectegranew.html, ANTES del cierre
 window.showTab = showTab;
 window.loadSavedSpecsList = loadSavedSpecsList;
 window.clearErrorLog = clearErrorLog;
