Change arrow function to regular function in event listener

--- a/index.html
+++ b/index.html
@@ -2589,7 +2589,7 @@ function loadErrorLog() {
 }
 
 // ========== FUNCIONES DE INICIALIZACIÓN ==========
-document.addEventListener('DOMContentLoaded', () => {
+document.addEventListener('DOMContentLoaded', function() {
     try {
         updateDateTime();
         updateDashboard();
