--- a/index.html
+++ b/index.html
@@ -1349,6 +1349,30 @@ function duplicatePlacement(placementId) {
 
     return newId;
 }
+    // ESTA ES LA FUNCIÓN QUE TE FALTA O QUE VAMOS A REEMPLAZAR
+function updateAllPlacementTitles(pId, newName) {
+    const section = document.getElementById(`placement-section-${pId}`);
+    if (!section) return;
+
+    // 1. Cambia el título principal
+    const mainTitle = section.querySelector('.placement-title span');
+    if (mainTitle) mainTitle.textContent = newName;
+
+    // 2. Cambia los títulos internos (Colores, Secuencia, etc.)
+    const subTitles = section.querySelectorAll('h3, h4');
+    subTitles.forEach(title => {
+        if (title.innerText.includes('Colores de') || title.innerText.includes('Colores para')) {
+            title.innerHTML = `<i class="fas fa-palette"></i> Colores de ${newName}`;
+        }
+        if (title.innerText.includes('Secuencia de')) {
+            title.innerHTML = `<i class="fas fa-list-ol"></i> Secuencia de ${newName}`;
+        }
+    });
+
+    // 3. Cambia el nombre en la pestaña de arriba
+    const tab = document.querySelector(`.tab-btn[onclick*="${pId}"]`);
+    if (tab) tab.innerText = newName;
+}
 
 // ========== FUNCIONES PARA PARÁMETROS EDITABLES ==========
 function updatePlacementParam(placementId, param, value) {
