--- a/index.html
+++ b/index.html
@@ -3845,7 +3845,56 @@ window.detectTeamFromStyle = detectTeamFromStyle;
 window.extractGenderFromStyle = extractGenderFromStyle;
     // ========== AGREGAR ESTA FUNCIÓN AL FINAL DEL ARCHIVO ==========
 // Añadir al final con las otras funciones exportadas
-window.fixInconsistentPlacementState = fixInconsistentPlacementState;
+// --- SOLUCIÓN DEFINITIVA PARA NOMBRES Y PDF ---
+
+// 1. Forzar la actualización de nombres en toda la interfaz
+window.updateCustomPlacement = function(id, value) {
+    const newName = value.trim() || "Nuevo Placement";
+    console.log(`Actualizando placement ${id} a: ${newName}`);
+
+    // Actualizar en el StateManager si existe
+    if (window.stateManager) {
+        window.stateManager.updatePlacement(id, { name: newName, customType: newName });
+    }
+
+    const section = document.getElementById(`placement-section-${id}`);
+    if (!section) return;
+
+    // Actualizar Título Principal
+    const mainTitle = section.querySelector('.placement-title span');
+    if (mainTitle) mainTitle.textContent = newName;
+
+    // Actualizar Títulos de Tarjetas (Colores, Secuencia, etc.)
+    const internalTitles = section.querySelectorAll('h3.card-title, h4');
+    internalTitles.forEach(t => {
+        if (t.innerText.includes('Colores') || t.innerText.includes('Tintas')) {
+            t.innerHTML = `<i class="fas fa-palette"></i> Colores de ${newName}`;
+        }
+        if (t.innerText.includes('Secuencia')) {
+            t.innerHTML = `<i class="fas fa-list-ol"></i> Secuencia de ${newName}`;
+        }
+    });
+
+    // Actualizar la Pestaña (Tab)
+    const tab = document.querySelector(`.placement-tab[data-placement-id="${id}"], .tab-btn[onclick*="${id}"]`);
+    if (tab) {
+        const icon = tab.querySelector('i') ? tab.querySelector('i').outerHTML : '';
+        tab.innerHTML = `${icon} ${newName}`;
+    }
+};
+
+// 2. Parche para el error de alineación del PDF
+// Buscamos la función original y la envolvemos en un protector de seguridad
+const originalDocText = window.jspdf.jsPDF.prototype.text;
+window.jspdf.jsPDF.prototype.text = function(text, x, y, options) {
+    if (options && options.align) {
+        const valid = ["left", "center", "right", "justify"];
+        if (!valid.includes(options.align)) {
+            options.align = "left"; // Forzamos left si el valor es extraño o vacío
+        }
+    }
+    return originalDocText.apply(this, arguments);
+};
   </script>
 </body>
 </html>
