--- a/index.html
+++ b/index.html
@@ -15,12 +15,11 @@
         <header class="app-header">
             </header>
 
-        <div id="anchor-reference-tables"></div>
+     <div id="anchor-help-modals"></div>
 
-        <main id="spec-creator" class="tab-content active">
-            </main>
+<div id="anchor-error-log"></div>
 
-        <div id="anchor-static-footer"></div>
+<div id="anchor-print-guides"></div>
     </div>
 
     <input type="file" id="excelFile" style="display: none;">
