--- a/index.html
+++ b/index.html
@@ -34,7 +34,20 @@
         <footer class="logos-footer">
             </footer>
     </template>
+<template id="tpl-help-modals">
+    <div class="modal" id="helpModal">...</div>
+</template>
 
+<template id="tpl-error-log">
+    <section class="error-container">
+        <h3><i class="fas fa-exclamation-circle"></i> Log del Sistema</h3>
+        <div id="error-display-area"></div> 
+    </section>
+</template>
+
+<template id="tpl-print-guides">
+    <div class="print-guide-lines">...</div>
+</template>
     <script>
         (function() {
             // Este mapa dice: "Toma el contenido de este Template y ponlo en este Div"
