--- a/index.html
+++ b/index.html
@@ -5,29 +5,39 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Tegra - Technical Spec Manager</title>
   
-  <!-- 1. ESTILOS PRIMERO -->
-  <link rel="stylesheet" href="styles.css">
-  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet">
-  
-  <!-- 2. LIBRERÍAS EXTERNAS -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.18.5/xlsx.full.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.10.1/jszip.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/FileSaver.js/2.0.5/FileSaver.min.js"></script>
-  
-  <!-- 3. NUESTROS MÓDULOS - ORDEN CRÍTICO CORREGIDO -->
-  <script type="module" src="modules/state-manager.js"></script>
-  <script type="module" src="modules/layout-manager.js"></script>
-  <script type="module" src="modules/export-manager.js"></script>
-  <script src="config-teams.js"></script>
-  <script src="config-app.js"></script>
-  <script src="utils.js"></script>
-  <script src="validators.js"></script>
-  <script src="error-handler.js"></script>
-  <script src="specialties-detector.js"></script>
-  <script src="render-helpers.js"></script>
-  <script src="fixes.js"></script>
+<!-- ORDEN CORREGIDO -->
+<!-- 1. Librerías externas primero -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.18.5/xlsx.full.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.10.1/jszip.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/FileSaver.js/2.0.5/FileSaver.min.js"></script>
+
+<!-- 2. Configuraciones y módulos base -->
+<script src="config-teams.js"></script>
+<script src="config-app.js"></script>
+<script src="utils.js"></script>
+<script src="validators.js"></script>
+<script src="error-handler.js"></script>
+<script src="specialties-detector.js"></script>
+<script src="render-helpers.js"></script>
+
+<!-- 3. State manager (nuevo) -->
+<script src="modules/state-manager.js"></script>
+
+<!-- 4. Nuestros templates -->
+<script src="templates/dashboard.template.js"></script>
+<script src="templates/spec-creator.template.js"></script>
+<script src="templates/saved-specs.template.js"></script>
+<script src="templates/error-log.template.js"></script>
+<script src="templates/placement.template.js"></script>
+
+<!-- 5. Nuestros módulos de gestión -->
+<script src="modules/layout-manager.js"></script>
+<script src="modules/export-manager.js"></script>
+
+<!-- 6. FIXES - DEBE SER EL ÚLTIMO -->
+<script src="fixes.js"></script>
 </head>
 <body>
   <div class="app-container">
