--- a/index.html
+++ b/index.html
@@ -5,38 +5,38 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Tegra - Technical Spec Manager</title>
   
-<!-- ORDEN CORREGIDO -->
-<!-- 1. Librerías externas primero -->
+<!-- 1. Librerías externas -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.18.5/xlsx.full.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.10.1/jszip.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/FileSaver.js/2.0.5/FileSaver.min.js"></script>
 
-<!-- 2. Configuraciones y módulos base -->
+<!-- 2. Configuraciones -->
 <script src="config-teams.js"></script>
 <script src="config-app.js"></script>
+
+<!-- 3. Utilidades -->
 <script src="utils.js"></script>
 <script src="validators.js"></script>
 <script src="error-handler.js"></script>
 <script src="specialties-detector.js"></script>
 <script src="render-helpers.js"></script>
 
-<!-- 3. State manager (nuevo) -->
-<script src="modules/state-manager.js"></script>
+<!-- 4. Estado -->
+<script src="state-manager.js"></script>
 
-<!-- 4. Nuestros templates -->
+<!-- 5. Templates -->
 <script src="templates/dashboard.template.js"></script>
 <script src="templates/spec-creator.template.js"></script>
 <script src="templates/saved-specs.template.js"></script>
 <script src="templates/error-log.template.js"></script>
 <script src="templates/placement.template.js"></script>
 
-<!-- 5. Nuestros módulos de gestión -->
+<!-- 6. Módulos -->
 <script src="modules/layout-manager.js"></script>
 <script src="modules/export-manager.js"></script>
 
-<!-- 6. FIXES - DEBE SER EL ÚLTIMO -->
+<!-- 7. Fixes (siempre al final) -->
 <script src="fixes.js"></script>
 </head>
 <body>
