--- a/index.html
+++ b/index.html
@@ -16,15 +16,9 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.10.1/jszip.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/FileSaver.js/2.0.5/FileSaver.min.js"></script>
   
-  <!-- 3. CONFIGURACIÓN DE LA APP (ORDEN CRÍTICO) -->
-  <script src="config-teams-unified.js"></script>
+  <!-- 3. CONFIGURACIÓN DE LA APP -->
+  <script src="config-app.js"></script>
   <script src="config-logos.js"></script>
-  <script src="utils.js"></script>
-  <script src="state-manager.js"></script>
-  <script src="validators.js"></script>
-  <script src="error-handler.js"></script>
-  <script src="specialties-detector.js"></script>
-  <script src="render-helpers.js"></script>
 
   <!-- 4. SCRIPT PRINCIPAL DE LA APLICACIÓN -->
   <script src="main.js" defer></script>
