--- a/index.html
+++ b/index.html
@@ -64,16 +64,16 @@
       <!-- ========================================================= -->
       <nav class="app-nav no-print">
           <ul class="nav-tabs">
-              <li class="nav-tab active" onclick="showTab('dashboard')">
+              <li class="nav-tab active" data-tab="dashboard">
                   <i class="fas fa-tachometer-alt"></i> Dashboard
               </li>
-              <li class="nav-tab" onclick="showTab('spec-creator')">
+              <li class="nav-tab" data-tab="spec-creator">
                   <i class="fas fa-file-alt"></i> Crear Spec
               </li>
-              <li class="nav-tab" onclick="showTab('saved-specs')">
+              <li class="nav-tab" data-tab="saved-specs">
                   <i class="fas fa-database"></i> Guardadas
               </li>
-              <li class="nav-tab" onclick="showTab('error-log')">
+              <li class="nav-tab" data-tab="error-log">
                   <i class="fas fa-exclamation-triangle"></i> Log de Errores
               </li>
           </ul>
@@ -82,226 +82,8 @@
       <!-- ========================================================= -->
       <!-- MAIN CONTENT -->
       <!-- ========================================================= -->
-      <main class="app-main">
-
-          <!-- ===================================================== -->
-          <!-- TAB: DASHBOARD -->
-          <!-- ===================================================== -->
-          <div id="dashboard" class="tab-content active">
-              <div class="dashboard-grid">
-                  <div class="stat-card">
-                      <div class="stat-number" id="total-specs">0</div>
-                      <div class="stat-label">Specs Totales</div>
-                  </div>
-                  <div class="stat-card">
-                      <div id="today-specs">
-                          <div style="font-size:0.9rem; color:var(--text-secondary);">Última Spec:</div>
-                          <div style="font-size:1.2rem; font-weight:bold; color:var(--primary);">Ninguna</div>
-                          <div style="font-size:0.8rem; color:var(--text-secondary);">-</div>
-                      </div>
-                      <div class="stat-label">Última Creación</div>
-                  </div>
-                  <div class="stat-card">
-                      <div class="stat-number" id="active-projects">0</div>
-                      <div class="stat-label">Proyectos Activos</div>
-                  </div>
-                  <div class="stat-card">
-                      <div id="completion-rate">
-                          <div style="font-size:0.9rem; color:var(--text-secondary);">Placements totales:</div>
-                          <div style="font-size:1.5rem; font-weight:bold; color:var(--primary);">0</div>
-                      </div>
-                      <div class="stat-label">Placements Totales</div>
-                  </div>
-              </div>
-
-              <div class="card">
-                  <div class="card-header">
-                      <h2 class="card-title"><i class="fas fa-rocket"></i> Acciones Rápidas</h2>
-                      <div class="no-print">
-                          <button class="btn btn-outline btn-sm" onclick="clearErrorLog()">
-                              <i class="fas fa-trash"></i> Limpiar Log
-                          </button>
-                      </div>
-                  </div>
-                  <div class="card-body" style="text-align:center;">
-                      <div style="margin-top:20px; display:flex; gap:15px; justify-content:center; flex-wrap:wrap;">
-                          <button class="btn btn-primary btn-lg" onclick="showTab('spec-creator')">
-                              <i class="fas fa-plus"></i> Nueva Spec
-                          </button>
-                          <button class="btn btn-warning btn-lg" onclick="document.getElementById('excelFile').click()">
-                              <i class="fas fa-folder-open"></i> Cargar Spec
-                          </button>
-                          <button class="btn btn-success btn-lg" onclick="document.getElementById('excelFile').click()">
-                              <i class="fas fa-file-excel"></i> Cargar SWO
-                          </button>
-                          <button class="btn btn-outline btn-lg" onclick="loadSavedSpecsList(); showTab('saved-specs')">
-                              <i class="fas fa-history"></i> Ver Historial
-                          </button>
-                          <button class="btn btn-danger btn-lg" onclick="showTab('error-log')">
-                              <i class="fas fa-bug"></i> Ver Errores
-                          </button>
-                      </div>
-                  </div>
-              </div>
-          </div>
-
-          <!-- ===================================================== -->
-          <!-- TAB: SPEC CREATOR -->
-          <!-- ===================================================== -->
-          <div id="spec-creator" class="tab-content">
-              <!-- INFORMACIÓN GENERAL -->
-              <div class="card">
-                  <div class="card-header">
-                      <h2 class="card-title"><i class="fas fa-info-circle"></i> Información General</h2>
-                      <div class="no-print">
-                          <button class="btn btn-warning btn-sm" onclick="document.getElementById('excelFile').click()">
-                              <i class="fas fa-folder-open"></i> Cargar SWO
-                          </button>
-                          <button class="btn btn-outline btn-sm" onclick="clearForm()" style="margin-left: 10px;">
-                              <i class="fas fa-broom"></i> Limpiar
-                          </button>
-                      </div>
-                  </div>
-                  <div class="card-body">
-                      <div class="form-grid">
-                          <div class="form-group">
-                              <label class="form-label">CLIENTE:</label>
-                              <input type="text" id="customer" class="form-control" oninput="updateClientLogo()">
-                          </div>
-                          <div class="form-group">
-                              <label class="form-label">STYLE:</label>
-                              <input type="text" id="style" class="form-control">
-                          </div>
-                          <div class="form-group">
-                              <label class="form-label">COLORWAY:</label>
-                              <input type="text" id="colorway" class="form-control">
-                          </div>
-                          <div class="form-group">
-                              <label class="form-label">SEASON:</label>
-                              <input type="text" id="season" class="form-control">
-                          </div>
-                          <div class="form-group">
-                              <label class="form-label">PATTERN #:</label>
-                              <input type="text" id="pattern" class="form-control">
-                          </div>
-                          <div class="form-group">
-                              <label class="form-label">P.O. #:</label>
-                              <input type="text" id="po" class="form-control">
-                          </div>
-                          <div class="form-group">
-                              <label class="form-label">SAMPLE TYPE:</label>
-                              <input type="text" id="sample-type" class="form-control">
-                          </div>
-                          <div class="form-group">
-                              <label class="form-label">NAME / TEAM:</label>
-                              <input type="text" id="name-team" class="form-control">
-                          </div>
-                          <div class="form-group">
-                              <label class="form-label">GENDER:</label>
-                              <input type="text" id="gender" class="form-control">
-                          </div>
-                          <div class="form-group">
-                              <label class="form-label">DISEÑADOR:</label>
-                              <select id="designer" class="form-control">
-                                  <option value="">Seleccionar...</option>
-                                  <option value="ELMER VELEZ">ELMER VELEZ</option>
-                                  <option value="DANIEL HERNANDEZ">DANIEL HERNANDEZ</option>
-                                  <option value="CINDY PINEDA">CINDY PINEDA</option>
-                                  <option value="FERNANDO FERRERA">FERNANDO FERRERA</option>
-                                  <option value="NILDA CORDOBA">NILDA CORDOBA</option>
-                                  <option value="OTRO">OTRO</option>
-                              </select>
-                          </div>
-                      </div>
-                  </div>
-              </div>
-
-              <!-- SISTEMA DE MÚLTIPLES PLACEMENTS -->
-              <div class="card">
-                  <div class="card-header">
-                      <h2 class="card-title"><i class="fas fa-layer-group"></i> Ubicaciones (Placements)</h2>
-                      <div class="no-print">
-                          <button class="btn btn-primary btn-sm" onclick="addNewPlacement()">
-                              <i class="fas fa-plus"></i> Agregar Placement
-                          </button>
-                      </div>
-                  </div>
-                  <div class="card-body">
-                      <div id="placements-tabs" class="placement-tabs">
-                          <!-- Tabs se generarán dinámicamente -->
-                      </div>
-                      
-                      <div id="placements-container">
-                          <!-- Cada placement será una sección dentro de este contenedor -->
-                      </div>
-                  </div>
-              </div>
-
-              <!-- BOTONES DE ACCIÓN -->
-              <div class="card no-print">
-                  <div class="card-body" style="display:flex; gap:15px; flex-wrap:wrap; justify-content:center;">
-                      <button class="btn btn-primary btn-lg" onclick="exportToExcel()">
-                          <i class="fas fa-file-excel"></i> Descargar Spec
-                      </button>
-                      <button class="btn btn-success btn-lg" onclick="exportPDF()">
-                          <i class="fas fa-file-pdf"></i> Exportar PDF
-                      </button>
-                      <button class="btn btn-warning btn-lg" onclick="downloadProjectZip()">
-                          <i class="fas fa-file-archive"></i> Descargar ZIP
-                      </button>
-                      <button class="btn btn-primary btn-lg" onclick="saveCurrentSpec()">
-                          <i class="fas fa-save"></i> Guardar Spec
-                      </button>
-                      <button class="btn btn-outline btn-lg" onclick="clearForm()">
-                          <i class="fas fa-broom"></i> Limpiar
-                      </button>
-                  </div>
-              </div>
-          </div>
-
-          <!-- ===================================================== -->
-          <!-- TAB: SPECS GUARDADAS -->
-          <!-- ===================================================== -->
-          <div id="saved-specs" class="tab-content">
-              <div class="card">
-                  <div class="card-header">
-                      <h2 class="card-title"><i class="fas fa-database"></i> Specs Guardadas (Browser)</h2>
-                      <button class="btn btn-outline btn-sm" onclick="clearAllSpecs()">
-                          <i class="fas fa-trash"></i> Limpiar Todo
-                      </button>
-                  </div>
-                  <div class="card-body" id="saved-specs-list">
-                      <p style="text-align:center; color:var(--text-secondary); padding:20px;">
-                          <i class="fas fa-database" style="font-size:2rem; margin-bottom:10px; display:block;"></i>
-                          No hay specs guardadas. Crea una nueva spec para verla aquí.
-                      </p>
-                  </div>
-              </div>
-          </div>
-
-          <!-- ===================================================== -->
-          <!-- TAB: LOG DE ERRORES -->
-          <!-- ===================================================== -->
-          <div id="error-log" class="tab-content">
-              <div class="card">
-                  <div class="card-header">
-                      <h2 class="card-title"><i class="fas fa-exclamation-triangle"></i> Log de Errores</h2>
-                      <div class="no-print">
-                          <button class="btn btn-outline btn-sm" onclick="clearErrorLog()">
-                              <i class="fas fa-trash"></i> Limpiar Log
-                          </button>
-                          <button class="btn btn-warning btn-sm" onclick="exportErrorLog()" style="margin-left: 10px;">
-                              <i class="fas fa-download"></i> Exportar
-                          </button>
-                      </div>
-                  </div>
-                  <div class="card-body">
-                      <div id="error-log-content">
-                          <!-- Los errores se cargarán aquí dinámicamente -->
-                      </div>
-                  </div>
-              </div>
-          </div>
+      <main class="app-main" id="app-content">
+          <!-- El contenido de las pestañas se cargará aquí dinámicamente -->
       </main>
 
       <div id="statusMessage" class="status-message"></div>
