--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
   <!-- 2. LIBRERÍAS EXTERNAS -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.18.5/xlsx.full.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.10.1/jszip.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/FileSaver.js/2.0.5/FileSaver.min.js"></script>
   
@@ -20,7 +19,10 @@
   <script src="config-app.js"></script>
   <script src="config-logos.js"></script>
 
-  <!-- 4. SCRIPT PRINCIPAL DE LA APLICACIÓN -->
+  <!-- 4. LÓGICA DE NEGOCIO Y UTILIDADES -->
+  <script src="utils.js"></script>
+
+  <!-- 5. SCRIPT PRINCIPAL DE LA APLICACIÓN -->
   <script src="main.js" defer></script>
 
 </head>
