--- a/index.html
+++ b/index.html
@@ -18,8 +18,7 @@
   
  <!-- 3. NUESTROS MÓDULOS - ORDEN CORREGIDO -->
 <!-- PRIMERO: Configuración base -->
-<script src="config.js"></script> <!-- Necesitas crear este archivo o asegurarte que existe -->
-
+<script src="config.js"></script> 
 <!-- SEGUNDO: Configuración de equipos -->
 <script src="config-teams.js"></script>
 
