--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.10.1/jszip.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/FileSaver.js/2.0.5/FileSaver.min.js"></script>
   
- <!-- 3. NUESTROS MÓDULOS - ORDEN CORREGIDO -->
+<!-- 3. NUESTROS MÓDULOS - ORDEN CORREGIDO -->
 <!-- PRIMERO: Configuración base -->
 <script src="config.js"></script> <!-- Necesitas crear este archivo o asegurarte que existe -->
 
@@ -46,6 +46,9 @@
 
 <!-- DÉCIMO: Fixes (debe ir ÚLTIMO, corrige todo) -->
 <script src="fixes.js"></script>
+
+<!-- DÉCIMO PRIMERO: Main - Punto de entrada principal -->
+<script src="js/main.js"></script>
 </head>
 <body>
   <div class="app-container">
