--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
   <script src="js/modules/ui/theme-manager.js"></script>
   <script src="js/modules/ui/dashboard-manager.js"></script>
   <script src="js/modules/ui/tabs-manager.js"></script>
-  <script src="js/modules/data/client-manager.js"></script>
-  <script src="js/modules/data/specs-manager.js"></script>
   <script src="js/modules/data/storage-manager.js"></script>
-  
+<script src="js/modules/data/client-data-manager.js"></script> <!-- Renombrado -->
+<script src="js/modules/data/specs-data-manager.js"></script> <!-- Renombrado -->
+
   <!-- ========== ENTRADA PRINCIPAL (ÚLTIMO) ========== -->
   <!-- main.js cargará los demás módulos (utils, core, placements, export) -->
   <script src="js/main.js"></script>
