--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Tegra - Technical Spec Manager</title>
+  <link rel="icon" href="data:,">
   
   <!-- 1. ESTILOS PRIMERO -->
   <link rel="stylesheet" href="styles.css">
